660_envoy_gateway/backend-traffic-policy-circuit-breaker.yaml
# https://gateway.envoyproxy.io/docs/tasks/traffic/circuit-breaker/
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: circuitbreaker-for-route
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: backend
  circuitBreaker:
    maxPendingRequests: 0
    maxParallelRequests: 10
